// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`--npm-client yarn: lockfiles 1`] = `
Array [
  "package-1/yarn.lock",
  "package-2/yarn.lock",
  "package-3/yarn.lock",
]
`;

exports[`--npm-client yarn: stderr 1`] = `
"lerna info version __TEST_VERSION__
lerna info Bootstrapping 4 packages
lerna info lifecycle preinstall
lerna info Installing external dependencies
lerna info Symlinking packages and binaries
lerna info lifecycle postinstall
lerna info lifecycle prepublish
lerna info lifecycle prepare
lerna success Bootstrapped 4 packages"
`;

exports[`--npm-client yarn: stdout 1`] = `
"package-1
package-2
cli package-2 OK
package-3 cli1 OK
package-3 cli2 package-2 OK"
`;

exports[`ignore: stderr 1`] = `
"lerna info version __TEST_VERSION__
lerna info ignore @integration/package-1
lerna info Bootstrapping 3 packages
lerna info lifecycle preinstall
lerna info Installing external dependencies
lerna info Symlinking packages and binaries
lerna info lifecycle postinstall
lerna info lifecycle prepublish
lerna info lifecycle prepare
lerna success Bootstrapped 3 packages"
`;

exports[`npm postinstall: stderr 1`] = `
"lerna info version __TEST_VERSION__
lerna success run Ran npm script 'test' in packages:
lerna success - @integration/package-1
lerna success - @integration/package-2
lerna success - @integration/package-3
lerna success - package-4"
`;

exports[`npm postinstall: stdout 1`] = `
"package-1
package-2
cli package-2 OK
package-3 cli1 OK
package-3 cli2 package-2 OK"
`;

exports[`passes remaining arguments + npmClientArgs to npm client 1`] = `"install,--production,--no-optional"`;

exports[`passes remaining arguments to npm client 1`] = `"install,--no-optional"`;

exports[`simple: stderr 1`] = `
"lerna info version __TEST_VERSION__
lerna info Bootstrapping 4 packages
lerna info lifecycle preinstall
lerna info Installing external dependencies
lerna info Symlinking packages and binaries
lerna info lifecycle postinstall
lerna info lifecycle prepublish
lerna info lifecycle prepare
lerna success Bootstrapped 4 packages"
`;

exports[`simple: stdout 1`] = `
"package-1
package-2
cli package-2 OK
package-3 cli1 OK
package-3 cli2 package-2 OK"
`;

exports[`simple-no-git-check: stdout 1`] = `
"lerna info version __TEST_VERSION__
lerna info Bootstrapping 4 packages
lerna info lifecycle preinstall
lerna info Installing external dependencies
lerna info Symlinking packages and binaries
lerna info lifecycle postinstall
lerna info lifecycle prepublish
lerna info lifecycle prepare
lerna success Bootstrapped 4 packages"
`;
